se agregaron estilos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>prueba hacktoberfest</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
        <h1>prueba de git en hacktoberfest 2020</h1>
